--- a/packages/app/src/index.scss
+++ b/packages/app/src/index.scss
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: 'Gilroy' sans-serif, !important;
+    font-family: 'Gilroy', Helvetica, sans-serif, !important;
     margin: 0;
     padding: 0;
     height: 100vh;
